Sincronizacao Dispositivos / Simplificacao Integracao

--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,11 @@ DB_MYSQL_USER=
 DB_MYSQL_PASSWORD=
 DB_MYSQL_NAME=desko_bifrost
 
-# lista de plugins que deverao ser carregados controlid,omni,nec
-PLUGINS="controlid"
+# Banco de dados ControlID
+
+CONTROLID_MYSQL_HOST=
+CONTROLID_MYSQL_PORT=3306
+CONTROLID_MYSQL_USER=
+CONTROLID_MYSQL_PASSWORD=
+CONTROLID_MYSQL_DB_NAME=controlid
+
