--- a/.env.example
+++ b/.env.example
@@ -26,10 +26,12 @@ DB_MYSQL_PASSWORD=
 DB_MYSQL_NAME=desko_bifrost
 
 # Banco de dados ControlID
-
 CONTROLID_MYSQL_HOST=
 CONTROLID_MYSQL_PORT=3306
 CONTROLID_MYSQL_USER=
 CONTROLID_MYSQL_PASSWORD=
 CONTROLID_MYSQL_DB_NAME=controlid
+
+CONTROLID_FUNCTION_ACCESS_CONTROL=false
+CONTROLID_FUNCTION_QRCODE=false
 
