--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=3000
 HOST=0.0.0.0
-NODE_ENV=development
-APP_KEY=
+NODE_ENV=production
+APP_KEY=xb5XY0p9K6q0fZpf8ysVU8xIoj83IV--
 
 # Chave de Assinatura (HMAC-SHA256) Fornecida no Painel Desko
 # https://developers.desko.com.br/webhook-iniciando
