--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ DB_MYSQL_PASSWORD=
 DB_MYSQL_NAME=desko_bifrost
 
 # Banco de dados ControlID
+CONTROLID_API="https://localhost:30443/api"
 CONTROLID_MYSQL_HOST=
 CONTROLID_MYSQL_PORT=3306
 CONTROLID_MYSQL_USER=
