- enviando personal badge desko

--- a/.env.example
+++ b/.env.example
@@ -26,13 +26,17 @@ DB_MYSQL_PASSWORD=
 DB_MYSQL_NAME=desko_bifrost
 
 # Banco de dados ControlID
-CONTROLID_API="https://localhost:30443/api"
 CONTROLID_MYSQL_HOST=
 CONTROLID_MYSQL_PORT=3306
 CONTROLID_MYSQL_USER=
 CONTROLID_MYSQL_PASSWORD=
 CONTROLID_MYSQL_DB_NAME=controlid
 
+CONTROLID_API="https://localhost:30443/api"
+CONTROLID_API_USER=""
+CONTROLID_API_PASSWORD=""
+
 CONTROLID_FUNCTION_ACCESS_CONTROL=false
 CONTROLID_FUNCTION_QRCODE=false
 
+CONTROLID_SCHEDULE_POOLING_MINUTES=5
