--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 PORT=3000
+#No cliente tem que ser 0.0.0.0 Ai ele escuta no IP da maquina
 HOST=0.0.0.0
 NODE_ENV=production
 APP_KEY=xb5XY0p9K6q0fZpf8ysVU8xIoj83IV--
@@ -9,34 +10,57 @@ SIGNATURE=
 
 # Dados de Acesso Client Api do Desko
 # https://developers.desko.com.br/referencia-api/autenticacao
-DESKO_API_URL="https://api.desko.com.br/v1.1"
+DESKO_API_URL=https://api.deskbee.io
 DESKO_API_CLIENT_ID=""
 DESKO_API_CLIENT_SECRET=""
-DESKO_API_SCOPE="booking.show building.show"
+DESKO_API_SCOPE=""
 
 DRIVE_DISK=local
 
+#define o tipo de banco de dados que será utilizado para a byfrost
+DATABASE_DRIVE=sqlite
 # Banco de dados interno (Default MySql)
 # https://docs.adonisjs.com/guides/database/introduction
-DB_CONNECTION=mysql
-DB_MYSQL_HOST=
+DB_CONNECTION=sqlite
+DB_MYSQL_HOST=localhost
 DB_MYSQL_PORT=3306
-DB_MYSQL_USER=
-DB_MYSQL_PASSWORD=
+DB_MYSQL_USER=root
+DB_MYSQL_PASSWORD=123456
 DB_MYSQL_NAME=desko_bifrost
 
+
+
 # Banco de dados ControlID
-CONTROLID_MYSQL_HOST=
+# informe o tipo de conexão: sqlite ou mysql
+CONTROLID_DB_CONNECTION=sqlite
+
+#Obrigatório para valor de CONTROLID_DB_CONNECTION igual a: mysql
+CONTROLID_MYSQL_HOST=localhost
 CONTROLID_MYSQL_PORT=3306
-CONTROLID_MYSQL_USER=
-CONTROLID_MYSQL_PASSWORD=
-CONTROLID_MYSQL_DB_NAME=controlid
+CONTROLID_MYSQL_USER=root
+CONTROLID_MYSQL_PASSWORD=123456
+CONTROLID_MYSQL_DB_NAME=acesso
+#Obrigatório para valor de CONTROLID_DB_CONNECTION igual a: sqlite
+CONTROLID_DB_SQLITE_PATH=C:\\ProgramData\\Control iD\\iDSecure\\acesso.sqlite
 
+#Informa o tipo de controle de acesso: controlid ou biostar
+PLUGIN=biostar
+
+#dados de acesso a api biostar
+BIOSTAR_API="https://10.1.1.227/api"
+BIOSTAR_USER="admin"
+BIOSTAR_PASSWORD="admin"
+
+#dados de acesso a api controlid
 CONTROLID_API="https://localhost:30443/api"
-CONTROLID_API_USER=""
-CONTROLID_API_PASSWORD=""
+CONTROLID_API_USER="admin"
+CONTROLID_API_PASSWORD="admin"
 
-CONTROLID_FUNCTION_ACCESS_CONTROL=false
-CONTROLID_FUNCTION_QRCODE=false
+#faz a inserção data inicio e fim do evento
+CONTROLID_FUNCTION_ACCESS_CONTROL=true
+CONTROLID_FUNCTION_QRCODE=true
+
+#para ativar é preciso configurar o checkin automatizado no deskbee e depois setar essa variável para true
+CONTROLID_FUNCTION_AUTOMATED_CHECKIN=true
 
 CONTROLID_SCHEDULE_POOLING_MINUTES=5
