--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,10 @@ SIGNATURE=
 
 # Dados de Acesso Client Api do Desko
 # https://developers.desko.com.br/referencia-api/autenticacao
-DESKO_API_URL=https://api.deskbee.io
-DESKO_API_CLIENT_ID=""
-DESKO_API_CLIENT_SECRET=""
-DESKO_API_SCOPE=""
+DESKBEE_API_URL=https://api.deskbee.io
+DESKBEE_API_CLIENT_ID=""
+DESKBEE_API_CLIENT_SECRET=""
+DESKBEE_API_SCOPE=""
 
 DRIVE_DISK=local
 
@@ -26,7 +26,7 @@ DB_MYSQL_HOST=localhost
 DB_MYSQL_PORT=3306
 DB_MYSQL_USER=root
 DB_MYSQL_PASSWORD=123456
-DB_MYSQL_NAME=desko_bifrost
+DB_MYSQL_NAME=DESKBEE_bifrost
 
 
 
@@ -61,6 +61,6 @@ CONTROLID_FUNCTION_ACCESS_CONTROL=true
 CONTROLID_FUNCTION_QRCODE=true
 
 #para ativar é preciso configurar o checkin automatizado no deskbee e depois setar essa variável para true
-CONTROLID_FUNCTION_AUTOMATED_CHECKIN=true
+FUNCTION_AUTOMATED_CHECKIN=true
 
-CONTROLID_SCHEDULE_POOLING_MINUTES=5
+SCHEDULE_POOLING_MINUTES=5
