--- a/.env.example
+++ b/.env.example
@@ -57,8 +57,8 @@ CONTROLID_API_USER="admin"
 CONTROLID_API_PASSWORD="admin"
 
 #faz a inserção data inicio e fim do evento
-CONTROLID_FUNCTION_ACCESS_CONTROL=true
-CONTROLID_FUNCTION_QRCODE=true
+FUNCTION_ACCESS_CONTROL=true
+FUNCTION_QRCODE=true
 
 #para ativar é preciso configurar o checkin automatizado no deskbee e depois setar essa variável para true
 FUNCTION_AUTOMATED_CHECKIN=true
