incluído homologação de controle de acesso para emails específicos

--- a/.env-controlid.example
+++ b/.env-controlid.example
@@ -1,7 +1,7 @@
 PORT=3000
 #No cliente tem que ser 0.0.0.0 Ai ele escuta no IP da maquina
 HOST=0.0.0.0
-NODE_ENV=production
+NODE_ENV=homologation
 APP_KEY=xb5XY0p9K6q0fZpf8ysVU8xIoj83IV--
 PLUGIN=controlid
 
@@ -28,8 +28,6 @@ CONTROLID_MYSQL_PORT=3306
 CONTROLID_MYSQL_USER=root
 CONTROLID_MYSQL_PASSWORD=123456
 CONTROLID_MYSQL_DB_NAME=acesso
-#Obrigatório para valor de CONTROLID_DB_CONNECTION igual a: sqlite
-CONTROLID_DB_SQLITE_PATH=C:\\ProgramData\\Control iD\\iDSecure\\acesso.sqlite
 
 
 #dados de acesso a api controlid
@@ -37,8 +35,13 @@ CONTROLID_API="https://localhost:30443/api"
 CONTROLID_API_USER="admin"
 CONTROLID_API_PASSWORD="admin"
 
+
+
 #faz a inserção data inicio e fim do evento
 FUNCTION_ACCESS_CONTROL=true
+##SE ambiente estiver em homologation(NODE_ENV) para verificar o funcionamento do controle de acesso
+#é necessário informar o email dos usuários que farão pzrate da homologaçao do controle de acesso
+EMAIL_USERS_HOMOLOGATION=exemplo@teste,com.br,exemplo2@teste.com.br
 FUNCTION_QRCODE=true
 
 #para ativar é preciso configurar o checkin automatizado no deskbee e depois setar essa variável para true
