--- a/.env.example
+++ b/.env.example
@@ -57,7 +57,12 @@ CONTROLID_API_USER="admin"
 CONTROLID_API_PASSWORD="admin"
 
 #faz a inserção data inicio e fim do evento
-FUNCTION_ACCESS_CONTROL=true
+FUNCTION_ACCESS_CONTROL=false
+FUNCTION_CUSTOM_ACCESS_CONTROL=false
+#se custom access control ativo é necessário passar par qual tipo de
+#place => dininghall, workspace, meetingroom, parking, coworking, bus, locker, service, bathroom, kitchen, reception, homeoffice
+#
+ACCESS_PLACE_TYPE=dininghall
 FUNCTION_QRCODE=true
 
 #para ativar é preciso configurar o checkin automatizado no deskbee e depois setar essa variável para true
