added token persistence

--- a/.env-controlid.example
+++ b/.env-controlid.example
@@ -15,7 +15,7 @@ DESKBEE_API_URL=https://api.deskbee.io
 DESKBEE_API_CLIENT_ID=""
 DESKBEE_API_CLIENT_SECRET=""
 DESKBEE_API_SCOPE=""
-
+ACCOUNT= "NOMEDACONTADESKBEE"
 DRIVE_DISK=local
 
 # Banco de dados ControlID
