--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@adonisjs/core": "^5.3.4",
     "@adonisjs/lucid": "^16.1.0",
     "axios": "^0.21.4",
+    "dotenv": "^16.0.3",
     "git-url-parse": "^11.6.0",
     "glob": "^7.2.0",
     "luxon": "^2.0.2",
@@ -39,7 +40,8 @@
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.20",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "ssl-root-cas": "^1.3.1"
   },
   "bin": "buildserver.js",
   "pkg": {
